rustdocs/errors/rust-bitcoin-hashes-src-sha3_256-benches.rs.txt
error[E0658]: use of unstable library feature `test`: `bench` is a part of custom test frameworks which are unstable
 --> ../rust-bitcoin/hashes/src/sha3_256/benches.rs:5:3
  |
5 | #[bench]
  |   ^^^^^
  |
  = note: see issue #50297 <https://github.com/rust-lang/rust/issues/50297> for more information
  = help: add `#![feature(test)]` to the crate attributes to enable
  = note: this compiler was built on 2025-12-16; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `test`: `bench` is a part of custom test frameworks which are unstable
  --> ../rust-bitcoin/hashes/src/sha3_256/benches.rs:15:3
   |
15 | #[bench]
   |   ^^^^^
   |
   = note: see issue #50297 <https://github.com/rust-lang/rust/issues/50297> for more information
   = help: add `#![feature(test)]` to the crate attributes to enable
   = note: this compiler was built on 2025-12-16; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `test`: `bench` is a part of custom test frameworks which are unstable
  --> ../rust-bitcoin/hashes/src/sha3_256/benches.rs:25:3
   |
25 | #[bench]
   |   ^^^^^
   |
   = note: see issue #50297 <https://github.com/rust-lang/rust/issues/50297> for more information
   = help: add `#![feature(test)]` to the crate attributes to enable
   = note: this compiler was built on 2025-12-16; consider upgrading it if it is out of date

error[E0432]: unresolved import `test`
 --> ../rust-bitcoin/hashes/src/sha3_256/benches.rs:1:5
  |
1 | use test::Bencher;
  |     ^^^^ use of unresolved module or unlinked crate `test`
  |
help: you might be missing a crate named `test`, add it to your project and import it in your code
  |
1 + extern crate test;
  |

error[E0432]: unresolved imports `crate::Hash`, `crate::HashEngine`
 --> ../rust-bitcoin/hashes/src/sha3_256/benches.rs:3:13
  |
3 | use crate::{Hash, HashEngine};
  |             ^^^^  ^^^^^^^^^^ no `HashEngine` in the root
  |             |
  |             no `Hash` in the root
  |
  = help: consider importing this trait instead:
          std::hash::Hash

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0432, E0658.
For more information about an error, try `rustc --explain E0432`.
